# ScenarioBuilder

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  AUDITORIA_FASE2.md  AUDITORIA_FASE3.md  BACKLOG_SEMANA_1.md  CHANGELOG.md  Dockerfile  GOD_MODULE_AUDIT.md  Makefile  PROJECT_STRUCTURE.md  QUALITY.md  README.md  SALIDA_ANTERIOR.md  TRIANGLE_DEPLOYMENT_ZONES.md  _check_db.py  alembic.ini  app.py  coverage.json  demo_seed.py  diag.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_results.txt  verify_users_seeding.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  e2e.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260215_000001_create_cards_table.py  20260215_000002_create_favorites_table.py  20260215_000003_create_users_table.py  20260215_000004_create_sessions_table.py
content/mesbg/: constraints.json  deployments.json  layouts.json  matched_heuristics.json  objectives.json  story_hooks.json  twists.json
context/agents/: implementer_api.md  implementer_ui.md  planner.md  refactorer.md  release_manager.md  security_reviewer.md  tester_e2e.md  tester_integration.md  tester_unit.md
context/architecture/: error-model.md  facade-pattern.md  import-policy.md  layers.md  ui-wiring-structure.md
context/devops/: ci-cd-policy.md  docker-policy.md
context/quality/: coverage-policy-100-80-0.md  definition-of-done.md  solid-checklist.md  tdd.md  testing-strategy-60-30-10.md
context/release/: changelog-policy.md
context/security/: auth-demo.md  authz-anti-idor.md  input-validation.md  secrets-and-config.md  security-by-design.md
context/workflow/: centaur.md  prompting.md
docs/architecture/: SONARQUBE_WIRING_ARCHITECTURAL_ISSUES.md  overview.md
docs/deploy/: runbook.md
docs/product/: mvp-scope.md  pitch.md  user-stories.md
docs/security/: threat-model.md
docs/testing/: gradio-characterization-tests.md
slides/: README.md
src/: __init__.py
src/adapters/: combined_app.py
src/domain/: errors.py  seed.py  validation.py
src/infrastructure/: bootstrap.py  clock.py
tests/: conftest.py
tests/e2e/: INFRASTRUCTURE.md  README.md  conftest.py  test_e2e_api_generate_card.py  utils.py  (+10 more)
(+340 files in other folders)
