[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario-builder"
version = "0.1.0"
description = "Scenario Builder with multi-layer architecture"
authors = [{name = "ScenarioBuilder Team"}]
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
    # Pyflakes: errors & undefined names
    "F",
    # pycodestyle: errors & warnings
    "E", "W",
    # pylint: style issues, complexity, etc.
    "C90",
    # bugbear: likely bugs & design problems
    "B",
    # simplify: code simplifications
    "SIM",
    # flake8-comprehensions
    "C4",
    # ruff-specific rules
    "RUF",
    # isort: import sorting
    "I",
    # Unused imports
    "F401",
    # Unused variables
    "F841",
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/adapters/http_flask/routes/maps.py" = ["I001"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.pylint]
max-line-length = 100
exit-zero = true

[tool.pylint.messages_control]
disable = [
    "line-too-long",  # Handled by ruff/black
    "missing-docstring",  # Optional; enable for stricter mode
    "too-many-arguments",  # Informational only
]

[tool.pylint.design]
max-locals = 15
max-branches = 12
max-statements = 50

[tool.radon]
exclude = ".git,__pycache__,.venv,venv,build,dist,tests"
ignore-nosec = false

[tool.vulture]
paths = ["src"]
exclude = [".venv", "venv", "build", "dist", "tests"]
min_confidence = 80

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
exclude = [".venv", "venv", "build", "dist"]

[tool.bandit]
exclude_dirs = [".venv", "venv", "build", "dist", "tests"]
tests = []
skips = []
